@@ -1,5 +1,15 @@
 2012-06-01  Filip Pizlo  <fpizlo@apple.com>
 
+        DFG CFA should mark basic blocks as having constants if local accesses yield constants
+        https://bugs.webkit.org/show_bug.cgi?id=88153
+
+        Reviewed by Gavin Barraclough.
+
+        * dfg/DFGAbstractState.cpp:
+        (JSC::DFG::AbstractState::execute):
+
+2012-06-01  Filip Pizlo  <fpizlo@apple.com>
+
         DFG arguments simplification phase uses a node.codeOrigin after appending a node
         https://bugs.webkit.org/show_bug.cgi?id=88151
 
